@@ -1,3 +1,7 @@
+2006-10-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
+
+	* vm-display-Quartz/sqUnixQuartz.m: Disable spin lock on non-PPC arch.
+
 2006-10-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
 	* vm/sqUnixCharConv.c: Solaris uses "iso5" external charset.
